# aevoria-simulator

./: .gitignore  .sconsign.dblite  CONTRIBUTORS.md  NetworkManager.gd  README.md  SConstruct  aevoria.gdextension  godot-cpp-.json  godot-cpp.config  server.js
aevoria-simulator/: icon.svg.import  project.godot
aevoria-simulator/scripts/: AevoriaManager.gd  active-alarms.gd  aevoria-actions.gd  corruption-records.gd  detect-sybil-attack.gd  initialize-law.gd  initialize-law.gd.uid  law_manager.gd  law_manager.gd.uid  resolve-alarm.gd  trigger-alarm-rpc.gd  trigger-alarm.gd
core/: attack_vectors.hpp  cur_mechanics.hpp  simulation.cpp  simulation.hpp  state.hpp  types.hpp
docs/: CRISIS-PROTOCOLS-SPEC.md  GOVERNANCE-ENGINE-SPEC.md  MONETIZATION_STRATEGY.md  SIMULATION-ARCHITECTURE-AND-CORE-LOOP.md  cur-integration-spec.md  difficulty-architecture.md
shared/examples/: economy_update.json  error.json  faction_activity.json  proposal_submit.json  (+2 more)
src/: CMakeCache.txt  CMakeLists.txt  alarm_system.h  direct_democracy_os.h  main.cpp  register_types.h  resource_commons.cpp  resource_commons.os  simulation_controller.cpp  simulation_controller.h
src/cpp/: alarm_system.cpp  alarm_system.h  corruption_detector.cpp  corruption_detector.h  direct_democracy_os.cpp  direct_democracy_os.h  direct_democracy_os.os  my_class.cpp  my_class.h  register_types.cpp  register_types.h  register_types.os  regulatory_engine.cpp  regulatory_engine.hpp  resource_commons.cpp  resource_commons.h  resource_commons.os
web/: .gitignore  .prettierignore  package-lock.json  package.json
(+6 files in other folders)
